# imdb-recommender

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_OLD.md  COMMIT_MESSAGE.md  ELASTICNET_CV_FINAL_REPORT.md  ELASTICNET_VS_SVD_COMPARISON.md  LICENSE  PROJECT_CLEANUP_SUMMARY.md  README.md  README_new.md  REPLICATION_GUIDE.md  SELENIUM_GUIDE.md  SVD_OPTIMIZATION_AUDIT_REPORT.md  TEST_REPORT.md  UPDATE_COMPLETION_SUMMARY.md  all_in_one_demo_model.pkl  all_in_one_demo_recommendations.csv  all_in_one_model.pkl  analyze_elasticnet_results.py  compare_recommendations.py  config.toml  debug_elasticnet_cv.py  demo_all_in_one.py  diagnose_elasticnet.py  elasticnet_cross_validation.py  elasticnet_recommender.py  fine_tune_svd_corrected.py  pyproject.toml  pytest.ini  recommendations_all_in_one.csv  run_elasticnet_cv.py  svd_corrected_results.json  svd_fine_tuning_results.json  test_candidate_system.py  test_content_type_filtering.py  test_elasticnet.py  test_hyperparameter_tuning.py  (+6 more)
.githooks/: pre-commit
data/: imdb_actions_log.csv
docs/: ALL_IN_ONE_GUIDE.md  DATA_LEAKAGE_ANALYSIS.md  DEVELOPMENT.md  ELASTICNET_VS_SVD_COMPARISON.md  INTEGRATION_SUMMARY.md  imdb_recommender_uplift_plan.md
hyperparameter_results/: all_in_one_20250818_164024.json  all_in_one_20250818_164024.pkl  full_tuning_summary_20250818_155834.json  full_tuning_summary_20250818_155902.json  full_tuning_summary_20250818_160025.json  full_tuning_summary_20250818_160519.json  full_tuning_summary_20250818_164024.json  full_tuning_summary_20250819_163150.json  pop_sim_20250818_155834.json  pop_sim_20250818_155834.pkl  pop_sim_20250818_155902.json  pop_sim_20250818_155902.pkl  pop_sim_20250818_160025.json  pop_sim_20250818_160025.pkl  pop_sim_20250818_160519.json  pop_sim_20250818_160519.pkl  pop_sim_20250818_164024.json  pop_sim_20250818_164024.pkl  pop_sim_20250819_163150.json  pop_sim_20250819_163150.pkl  svd_20250818_164024.json  svd_20250818_164024.pkl
imdb_recommender/: __init__.py  cli.py  config.py  data_io.py  features.py  hyperparameter_tuning.py  logger.py  ranker.py  recommender_all_in_one.py  recommender_base.py  (+4 more)
(+74 files in other folders)
