
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imdb-recommender"
version = "0.1.0"
description = "Local IMDb recommender with rating/watchlist logging for Selenium replay"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="IMDb Recommender Authors"}]
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "pydantic>=2.4.0",
  "typer>=0.9.0",
  "click>=8.1.3",
  "python-dotenv>=1.0.0",
  "tomli>=2.0.1; python_version<'3.11'",
]

[project.scripts]
imdbrec = "imdb_recommender.cli:app"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
